--- a/error/401.html
+++ b/error/401.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="errorstyle.css">
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <title>Error 401</title>
 </head>
