Improve error page text centering

--- a/error/401.html
+++ b/error/401.html
@@ -7,10 +7,11 @@
 </head>
 
 <body>
-<div class="cont">
+<div id="container">
 	<div class="small">Error</div><br>
 	<div class="number">401</div><br>
 	<div class="small">Unauthorized</div>
 </div>
+<script src="errorutils.js"></script>
 </body>
 </html>
