--- a/error/503.html
+++ b/error/503.html
@@ -7,10 +7,11 @@
 </head>
 
 <body>
-<div class="cont">
+<div id="container">
 	<div class="small">Error</div><br>
 	<div class="number">503</div><br>
 	<div class="small">Service Temporarily Unavailable</div>
 </div>
+<script src="errorutils.js"></script>
 </body>
 </html>
