--- a/error/400.html
+++ b/error/400.html
@@ -7,10 +7,11 @@
 </head>
 
 <body>
-<div class="cont">
+<div id="container">
 	<div class="small">Error</div><br>
 	<div class="number">400</div><br>
 	<div class="small">Bad Request</div>
 </div>
+<script src="errorutils.js"></script>
 </body>
 </html>
