--- a/error/403.html
+++ b/error/403.html
@@ -7,10 +7,11 @@
 </head>
 
 <body>
-<div class="cont">
+<div id="container">
 	<div class="small">Error</div><br>
 	<div class="number">403</div><br>
 	<div class="small">Forbidden</div>
 </div>
+<script src="errorutils.js"></script>
 </body>
 </html>
