Add comment enable to preferences

--- a/footer.html
+++ b/footer.html
@@ -6,6 +6,6 @@
 	</style>
 </head>
 <body>
-<div class="footer">Copyright &copy; 2019-2020 Nikhil Ograin</div>
+<div class="footer">Copyright &copy; 2019-2021 Boomaa23</div>
 </body>
 </html>
